--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "chercher-plugin-rss"
-version = "0.1.0"
+version = "0.1.2"
 description = "Chercher plugin that adds support for RSS feeds."
 readme = "README.md"
 authors = [{ name = "dnlzrgz", email = "contact@dnlzrgz.com" }]
@@ -8,9 +8,9 @@ license = "MIT"
 classifiers = []
 requires-python = ">=3.13"
 dependencies = [
-    "chercher",
- "feedparser>=6.0.11",
- "httpx[brotli,zstd]>=0.28.1",
+  "chercher>=0.1.23",
+  "feedparser>=6.0.11",
+  "httpx[brotli,zstd]>=0.28.1",
 ]
 
 
