--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "chercher-plugin-rss"
-version = "0.1.2"
+version = "0.1.3"
 description = "Chercher plugin that adds support for RSS feeds."
 readme = "README.md"
 authors = [{ name = "dnlzrgz", email = "contact@dnlzrgz.com" }]
@@ -8,9 +8,12 @@ license = "MIT"
 classifiers = []
 requires-python = ">=3.13"
 dependencies = [
-  "chercher>=0.1.23",
+  "beautifulsoup4>=4.13.4",
+  "chercher>=0.1.26",
   "feedparser>=6.0.11",
   "httpx[brotli,zstd]>=0.28.1",
+  "lxml>=5.4.0",
+  "markdownify>=1.1.0",
 ]
 
 
